--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,13 +60,19 @@ jobs:
           out-file-path: "downloads"
           token: ${{ secrets.RELEASE_MACHINE_TOKEN }}
 
+      - name: Push empty commit
+        id: get-version
+        run: |
+          short_version=${inputs.tag%.*}
+          echo "short_version=${short_version}" >> $GITHUB_OUTPUT
+
       - name: Upload Installers
         working-directory: downloads
         run: |
             gh release upload ${{inputs.tag}} \
-                   MeshInspectorInstaller_${{inputs.tag}}.msi \
-                   meshinspector_${{inputs.tag}}_ubuntu20.deb \
-                   meshinspector_${{inputs.tag}}_ubuntu22.deb \
-                   meshinspector_${{inputs.tag}}.rpm \
-                   MeshInspector_${{inputs.tag}}_x64.pkg \
-                   MeshInspector_${{inputs.tag}}_arm.pkg
+                   MeshInspectorInstaller_${{steps.get-version.outputs.short_version}}.msi \
+                   meshinspector_${{steps.get-version.outputs.short_version}}_ubuntu20.deb \
+                   meshinspector_${{steps.get-version.outputs.short_version}}_ubuntu22.deb \
+                   meshinspector_${{steps.get-version.outputs.short_version}}.rpm \
+                   MeshInspector_${{steps.get-version.outputs.short_version}}_x64.pkg \
+                   MeshInspector_${{steps.get-version.outputs.short_version}}_arm.pkg
