--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Push empty commit
         id: get-version
         run: |
-          short_version=${inputs.tag%.*}
+          short_version=${{inputs.tag%.*}}
           echo "short_version=${short_version}" >> $GITHUB_OUTPUT
 
       - name: Upload Installers
