--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,6 +39,13 @@ jobs:
           gh api /repos/MeshInspector/MeshInspectorCode/releases/tags/${{inputs.tag}} | jq -r '. | .body' > changelog.txt
           python3 update_release_body.py ${{env.RELEASE_PATH}} ${{inputs.tag}}
 
+      - name: Push empty commit
+        id: get-version
+        run: |
+          short_version=${{inputs.tag}}
+          short_version=${short_version%.*}
+          echo "short_version=${short_version}" >> $GITHUB_OUTPUT
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -46,7 +53,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.MESHRUSBOT_TOKEN }}
         with:
           tag_name: ${{inputs.tag}}
-          release_name: Release ${{inputs.tag}}
+          release_name: Release ${{steps.get-version.outputs.short_version}}
           draft: false
           prerelease: false
           body_path: .github/final_body.txt
@@ -64,9 +71,9 @@ jobs:
         working-directory: downloads
         run: |
             gh release upload ${{inputs.tag}} \
-                   MeshInspectorInstaller_${{inputs.tag}}.msi \
-                   meshinspector_${{inputs.tag}}_ubuntu20.deb \
-                   meshinspector_${{inputs.tag}}_ubuntu22.deb \
-                   meshinspector_${{inputs.tag}}.rpm \
-                   MeshInspector_${{inputs.tag}}_x64.pkg \
-                   MeshInspector_${{inputs.tag}}_arm.pkg
+                   MeshInspectorInstaller_${{steps.get-version.outputs.short_version}}.msi \
+                   meshinspector_${{steps.get-version.outputs.short_version}}_ubuntu20.deb \
+                   meshinspector_${{steps.get-version.outputs.short_version}}_ubuntu22.deb \
+                   meshinspector_${{steps.get-version.outputs.short_version}}.rpm \
+                   MeshInspector_${{steps.get-version.outputs.short_version}}_x64.pkg \
+                   MeshInspector_${{steps.get-version.outputs.short_version}}_arm.pkg
