--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -73,7 +73,9 @@ jobs:
             gh release upload ${{inputs.tag}} \
                    MeshInspectorInstaller_${{steps.get-version.outputs.short_version}}.msi \
                    meshinspector_${{steps.get-version.outputs.short_version}}_ubuntu20.deb \
+                   meshinspector_${{steps.get-version.outputs.short_version}}_ubuntu20-arm64.deb \
                    meshinspector_${{steps.get-version.outputs.short_version}}_ubuntu22.deb \
+                   meshinspector_${{steps.get-version.outputs.short_version}}_ubuntu22-arm64.deb \
                    meshinspector_${{steps.get-version.outputs.short_version}}.rpm \
                    MeshInspector_${{steps.get-version.outputs.short_version}}_x64.pkg \
                    MeshInspector_${{steps.get-version.outputs.short_version}}_arm.pkg
