introduce Linux AppImage

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -65,6 +65,8 @@ jobs:
         run: |
             gh release upload ${{inputs.tag}} \
                    MeshInspectorInstaller_${{inputs.tag}}.msi \
+                   MeshInspector_${{inputs.tag}}-x86_64.AppImage \
+                   MeshInspector_${{inputs.tag}}-aarch64.AppImage \
                    meshinspector_${{inputs.tag}}_ubuntu20.deb \
                    meshinspector_${{inputs.tag}}_ubuntu20-arm64.deb \
                    meshinspector_${{inputs.tag}}_ubuntu22.deb \
